6.1.1
------
(RB=769550)
Convey that the removal of optional fields may be a backward incompatible change
(RB=779968)
Remove JVM argument for setting the max memory sizes available to the JVM

6.1.0
------
(RB=727325)
Netty HTTP/2 client implementation

6.0.17
------
(RB=633492)
Add H2C Jetty server option to r2-perf-test
(RB=778322)
Making TestStreamEcho.testBackPressureEcho test more generous and add logging

6.0.16
------
(RB=777408)
Change AbstractR2Servlet to only read input stream with size when content length is present
(RB=777578)
Fix test concurrency issue in TestAsyncSharedPoolImpl

6.0.15
------
(RB=770138)
Removes -XX:MaxPermSize JVM argument now that we are fully on JDK8
(RB=770372)
Reduces the number of threads in the ScheduledThreadPoolExecutor used in TestAsyncSharedPoolImpl
(RB=772345)
Add a new consistent hash ring implementation that is more balanced and uses less memory.

6.0.14
------
(RB=760311)
Skip decoding simple keys which were passed in the request body for BATCH UPDATE and PATCH requests.

6.0.13
------
(RB=757621)
Removed double quotes for cookie attribute values.

6.0.12
------
(RB=756157)
Adding setters for projection masks in ServerResourceContext and FilterRequestContext.

(RB=706638)
Add a shared implementation of AsyncPool, AsyncSharedPoolImpl

6.0.11
------
(RB=743441)
Support projections in rest.li schema validation

(RB=743114)
Add a custom data comparator for JSON-like comparisons, and custom
data asserts with easy-to-understand error messages.

6.0.10
------
(RB=731493)
Add a d2 delay test framework

(RB=742691)
Fixed cookie attribute name Max-Age.

(RB=742297)
Add PathKeyParam annotation to enable declaring methods with strongly
typed keys.

6.0.9
------
(RB=743280)
Use parameterized logging to avoid excessive string concatenation

6.0.8
------
(RB=736708)
Add symlink support for Zk#getChildren with Children2Callback

6.0.7
------
(RB=727062)
Fixing the flawed comparision of keys on batch update/patch operations.
